# CUDA-Kernel-Practice

./: .gitignore  README.md  README_CN.md  pyproject.toml
FlashAttention/: benchmark.py  flash_attention.py  naive_attention.py  test.py
gemm_from_scratch/: 01_gemm_native.cu  02_gemm_tile.cu  03_gemm_reg.cu
kernels/: lessons.md  llm_kernels.cu  ncu_profile.sh  new_session.py  profile.py  run.py
kernels/reference/: README.md  bindings.cu  block_reduce.cu  block_reduce_triton.py  common.cuh  flash_attention.cu  flash_attention_triton.py  fused_mha.cu  fused_mha_triton.py  gemm.cu  gemm_triton.py  layernorm.cu  layernorm_triton.py  softmax.cu  softmax_triton.py
