[project]
name = "cuda-kernel-practice"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "torch",
    "triton",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
